--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <button id="stopBtn">结束</button>
+    <button id="continue">继续</button>
     <canvas id="canvas-area"></canvas>
 
     <script src="../dist/main.js">
